# SwingTraderAI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  celery_app.py  docker-compose.yml  pyproject.toml
.github/docs/: Scripts-RUS.md
.github/workflows/: fastapi-test-db.yml  fastapi.yml
alembic/: env.py
docker/: Dockerfile.api  Dockerfile.tml  Dockerfile.worker
frontend/: README.md  index.html  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/app/: providers.tsx  query-client.ts  route-error-boundary.tsx  router.tsx
frontend/src/app/layouts/: app-layout.tsx
frontend/src/features/admin/hooks/: admin-hooks.ts
frontend/src/features/ai-lab/hooks/: ai-lab-hooks.ts
frontend/src/features/ai/hooks/: ai-hooks.ts
frontend/src/features/alerts/hooks/: alerts-hooks.ts
frontend/src/features/analytics/hooks/: analytics-hooks.ts
frontend/src/features/auth/: auth-init.ts
frontend/src/features/auth/components/: protected-route.tsx
frontend/src/features/auth/hooks/: auth-hooks.ts
frontend/src/features/auth/schemas/: api-schemas.ts  auth-schemas.ts
frontend/src/features/auth/store/: auth-store.ts
frontend/src/pages/: admin-ml-training.tsx  admin-system-status.tsx  admin-users.tsx  ai-copilot.tsx  ai-lab.tsx  alerts.tsx  analytics.tsx  backtesting.tsx  dashboard.tsx  journal.tsx  login.tsx  markets.tsx  not-found.tsx  portfolio.tsx  profile.tsx  register.tsx  scanner.tsx  settings.tsx  signals.tsx  strategies.tsx  support.tsx  ticker.tsx  watchlist.tsx
frontend/src/shared/api/: api-client-types.ts  api-client.ts  api-types.ts  axios.ts  error-handler.ts  mock-api.ts  query-keys.ts  schema-utils.ts  tokens.ts
frontend/src/shared/hooks/: use-hotkeys.ts
frontend/src/shared/mock/: ai.mock.ts  mock-data.ts  portfolio.mock.ts  predictions.mock.ts  signals.mock.ts  tickers.mock.ts  watchlist.mock.ts
frontend/src/shared/ui/: ai-insight-card.tsx  animated-number.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown.tsx  empty-state.tsx  error-state.tsx  glass-card.tsx  index.ts  input.tsx  label.tsx  live-pulse-indicator.tsx  loading-skeleton.tsx  market-heat-badge.tsx  market-status-badge.tsx  metric-row.tsx  modal.tsx  page-header.tsx  section-card.tsx  section-header.tsx  signal-badge.tsx  skeleton.tsx  spinner.tsx  stat-card.tsx  table.tsx  tabs.tsx  theme-toggle.tsx
frontend/src/widgets/: market-overview.tsx  portfolio-overview.tsx  sidebar.tsx  ticker-chart.tsx  topbar.tsx  watchlist-widget.tsx
swingtraderai/: celery.py  main.py
swingtraderai/admin/metrics/: business.py  ml.py  performance.py
swingtraderai/api/: deps.py
swingtraderai/api/repositories/: base.py  position_repository.py  ticker_repository.py  user_repository.py  watchlist_repository.py
swingtraderai/api/repositories/admin/: user_repository.py
swingtraderai/api/services/: auth_service.py  indicator_service.py  portfolio_service.py  position_service.py  ticker_service.py  user_service.py  watchlist_service.py
swingtraderai/api/services/admin/: user_service.py
swingtraderai/api/v1/: auth.py  indicators.py  tickers.py  users.py  watchlist.py
swingtraderai/api/v1/admin/: __init__.py  ml.py  users.py
swingtraderai/core/: config.py  exceptions.py  rate_limit.py  security.py  tenant.py
swingtraderai/core/middleware/: metrics.py
swingtraderai/db/: base.py  models.py  session.py
swingtraderai/db/models/: __init__.py  analysis.py  market.py  system.py  ticker.py  user.py
swingtraderai/indicators/: __init__.py  base.py  levels.py  matrix.py  momentum.py  price_action.py  registry.py  technical.py  volume.py
swingtraderai/ingestion/: saver.py
swingtraderai/ingestion/sources/: base.py  binance.py  bybit.py  ccxt_base.py  moex.py
swingtraderai/ml/: inference.py  loader.py  trainer.py
swingtraderai/schemas/: admin.py  analysis.py  auth.py  indicators.py  market_data.py  notification.py  prediction.py  signal.py  ticker.py  user.py  watchlist.py
swingtraderai/tasks/: ingestion.py  pipeline.py  rotate_api_metrics.py
tests/: conftest.py  test_db.py
tests/admin/metrics/: test_business_metrics.py  test_ml_metrics.py  test_performance_metrics.py
tests/api/: test_deps.py
tests/api/repositories/: test_user_repository.py  test_watchlist_repository.py
tests/api/services/: test_auth_service.py  test_portfolio_service.py  test_position_service.py  test_ticker_service.py  test_user_service.py  test_watchlist_service.py
tests/core/: test_config.py  test_security.py
tests/core/middleware/: test_metrics.py
tests/db/: test_session.py
tests/db/models/: test_analysis.py  test_market.py  test_system.py  test_user.py
tests/indicators/: test_base.py  test_levels.py  test_matrix.py  test_momentum.py  test_price_action.py  test_registry.py  test_technical.py  test_volume.py
tests/ingestion/: test_saver.py
tests/ingestion/sources/: test_base.py  test_binance.py  test_bybit.py  test_ccxt_base.py  test_moex.py
tests/schemas/: test_admin_schemas.py  test_analysis_schemas.py  test_market_data_schemas.py  test_notification_schemas.py  test_prediction_schemas.py  test_signal_schemas.py  test_user_schemas.py
(+14 files in other folders)
