[project]
name = "swingtraderai"
version = "0.1.0"
description = ""
authors = [
	{name = "Bulat Nasyrov",email = "bulatnasirov2003@gmail.com"}
]
license = {text = "Apache2.0"}
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
	"fastapi>=0.115.0",
	"uvicorn[standard]>=0.30.0",

	"sqlalchemy[asyncio]>=2.0.0",
	"asyncpg>=0.29.0",
	"alembic>=1.13.0",

	"pydantic>=2.8.0",
	"pydantic-settings>=2.5.0",

	"aiogram>=3.13.0",

	"yfinance>=0.2.40",
	"ccxt>=4.3.0",
	"pandas>=2.2.0",
	"pandas-ta>=0.3.14b0",
	"numpy>=2.0.0",

	"apscheduler>=3.10.0",

	"langchain>=0.3.0",
	"langgraph>=0.2.0",

	"python-dotenv>=1.0.0",
	"httpx>=0.27.0",
	"tenacity>=9.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
