[project]
name = "swingtraderai"
version = "0.1.0"
description = ""
authors = [
	{name = "Bulat Nasyrov",email = "bulatnasirov2003@gmail.com"}
]
license = {text = "Apache2.0"}
readme = "README.md"
requires-python = ">=3.12,<=3.14"
dependencies = [
	"fastapi>=0.115.0",
	"uvicorn[standard]>=0.30.0",

	"sqlalchemy[asyncio]>=2.0.0",
	"asyncpg>=0.29.0",
	"alembic>=1.13.0",

	"pydantic>=2.8.0",
	"pydantic-settings>=2.5.0",

	"aiogram>=3.13.0",

	"yfinance>=0.2.40",
	"ccxt>=4.3.0",
	"pandas>=2.2.0",
	"pandas-ta>=0.3.14b0",
	"numpy>=2.0.0",

	"apscheduler>=3.10.0",

	"langchain>=0.3.0",
	"langgraph>=0.2.0",

	"python-dotenv>=1.0.0",
	"httpx>=0.27.0",
	"tenacity>=9.0.0",
	"celery (>=5.6.2,<6.0.0)",
	"redis (>=7.2.1,<8.0.0)",
]

packages = [
	{ include = "swingtraderai" }
]

[tool.poetry.group.test.dependencies]
black = "^24.10.0"
ruff = "^0.9.0"
mypy = "^1.14.0"
pytest = "^8.0.0"
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
indent-style = "tab"
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4"]
ignore = [
	"W191",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["tests/.*", "alembic/.*"]

[[tool.mypy.overrides]]
module = ["tests.*", "alembic.*"]
ignore_errors = true
disallow_untyped_defs = false
check_untyped_defs = false
